internal/gatewayapi/testdata/tlsroute-with-tls-listener-missing-mode.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: tls
      port: 90
      protocol: TLS
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Listener must have TLS set when protocol is TLS.
        reason: Invalid
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tls
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      - group: gateway.networking.k8s.io
        kind: TLSRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
tlsRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TLSRoute
  metadata:
    name: tlsroute-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    backends:
    - metadata:
        kind: TLSRoute
        name: tlsroute-1
        namespace: default
      name: tlsroute/default/tlsroute-1/rule/-1
      settings:
      - addressType: IP
        endpoints:
        - host: 7.7.7.7
          port: 8080
        metadata:
          kind: Service
          name: service-1
          namespace: default
          sectionName: "8080"
        name: tlsroute/default/tlsroute-1/rule/-1/backend/0
        protocol: TCP
        weight: 1
    - metadata:
        kind: Service
        name: envoy-envoy-gateway-gateway-1-196ae069
        namespace: envoy-gateway-system
        sectionName: "8080"
      name: envoy-gateway/gateway-1
      settings:
      - addressType: IP
        endpoints:
        - host: 7.6.5.4
          port: 8080
          zone: zone1
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        protocol: TCP
    globalResources:
      proxyServiceCluster:
        backendClusterRefs:
        - name: envoy-gateway/gateway-1
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
